--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -2,6 +2,7 @@
     <div class="footer--wrap">
         <a href="{{'/legal/imprint' | url }}">copyright and imprint</a>
         <a href="{{'/legal/privacy' | url }}">privacy policy</a>
+        <a href="{{'/overte.ev/ev' | url }}">Overte e.V.</a>
     </div>
 </footer>
 <script  src="/js/main.min.js"></script>
