Fixed link styling, fixed external link, fixed logo colors

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -1,7 +1,7 @@
 <footer>
     <div class="footer--wrap">
-        <a href="{{'/legal/imprint' | url }}">copyright and imprint</a>
-        <a href="{{'/legal/privacy' | url }}">privacy policy</a>
+        <a href="{{'/legal/imprint' | url }}">Copyright and Imprint</a>
+        <a href="{{'/legal/privacy' | url }}">Privacy policy</a>
         <a href="{{'/overte.ev/ev' | url }}">Overte e.V.</a>
     </div>
 </footer>
