--- a/src/sass/elements/header.scss
+++ b/src/sass/elements/header.scss
@@ -34,7 +34,7 @@ nav {
     }
 
     & #logo-dot {
-        background: #000000;
+        background: #6667AB;
         margin-left: 0;
         padding-right: 5px;
         border-radius: 50px;
@@ -46,6 +46,10 @@ nav {
         left: -6px;
         opacity: 0;
         transition: all 0.2s;
+
+        @media (prefers-color-scheme: dark) {
+            background: #000000;
+        }
 
         &.is--visible {
             opacity: 1;
