--- a/src/_includes/page.njk
+++ b/src/_includes/page.njk
@@ -1,9 +1,10 @@
 {% include "partials/header.njk" %}
 {% block content %}
-<a href="{{'/' | url }}#">
-    <img src="{{'/img/o_only_black.svg' | url }}" alt="Overte Logo" class="logo--sticky  light"><img src="{{'/img/verte_only_black.svg' | url }}" alt="Overte Logo" class="logo light">
-    <img src="{{'/img/o_only_white.svg' | url }}" alt="Overte Logo" class="logo--sticky dark"><img src="{{'/img/verte_only_white.svg' | url }}" alt="Overte Logo" class="logo dark">
+<a href="{{'/' | url }}#" class="home-link">
 </a>
+<img src="{{'/img/o_only_black.svg' | url }}" alt="Overte Logo" class="logo--sticky  light"><img src="{{'/img/verte_only_black.svg' | url }}" alt="Overte Logo" class="logo light">
+<img src="{{'/img/o_only_white.svg' | url }}" alt="Overte Logo" class="logo--sticky dark"><img src="{{'/img/verte_only_white.svg' | url }}" alt="Overte Logo" class="logo dark">
+
 {% include "partials/navigation.njk" %}
 <main>
     {% include "partials/gallery-top.njk" %}
