--- a/src/sass/elements/header.scss
+++ b/src/sass/elements/header.scss
@@ -7,6 +7,14 @@ nav, .logo--sticky {
         position: initial;
     }
 }
+.home-link {
+    margin-left: calc(var(--element-spacing) - var(--logo-spacing));
+    width: 185px;
+    display: block;
+    height: 55px;
+    position: absolute;
+    top: 10px;
+}
 .logo--sticky {
     z-index: 10;
     padding-left: calc(#{$element-spacing} - #{$logo-spacing});
