Added home link to lay-post layout, added Julian and 74 profile pics

--- a/src/_includes/news-post.njk
+++ b/src/_includes/news-post.njk
@@ -1,5 +1,7 @@
 {% include "partials/header.njk" %}
 {% block content %}
+<a href="{{'/' | url }}#" class="home-link">
+</a>
 <img src="/img/o_only_black.svg" alt="Overte Logo" class="logo--sticky  light"><img src="/img/verte_only_black.svg" alt="Overte Logo" class="logo light">
 <img src="/img/o_only_white.svg" alt="Overte Logo" class="logo--sticky dark"><img src="/img/verte_only_white.svg" alt="Overte Logo" class="logo dark">
 {% include "partials/navigation.njk" %}
