--- a/src/sass/elements/article.scss
+++ b/src/sass/elements/article.scss
@@ -20,6 +20,9 @@ main {
             top: -50px;
         }
     }
+    & p {
+        line-height: 1.3;
+    }
     & p, & h2 {
         margin-bottom: 30px;
     }
