--- a/src/_includes/news-post.njk
+++ b/src/_includes/news-post.njk
@@ -2,8 +2,9 @@
 {% block content %}
 <a href="{{'/' | url }}#" class="home-link">
 </a>
-<img src="/img/o_only_black.svg" alt="Overte Logo" class="logo--sticky  light"><img src="/img/verte_only_black.svg" alt="Overte Logo" class="logo light">
-<img src="/img/o_only_white.svg" alt="Overte Logo" class="logo--sticky dark"><img src="/img/verte_only_white.svg" alt="Overte Logo" class="logo dark">
+<img src="{{'/img/o_only_black.svg' | url }}" alt="Overte Logo" class="logo--sticky  light"><img src="{{'/img/verte_only_black.svg' | url }}" alt="Overte Logo" class="logo light">
+<img src="{{'/img/o_only_white.svg' | url }}" alt="Overte Logo" class="logo--sticky dark"><img src="{{'/img/verte_only_white.svg' | url }}" alt="Overte Logo" class="logo dark">
+
 {% include "partials/navigation.njk" %}
 <main>
     <article class="section">
