--- a/src/sass/elements/downloads.scss
+++ b/src/sass/elements/downloads.scss
@@ -10,6 +10,11 @@ a.external-link {
     display: inline-block;
     position: relative;
     white-space: nowrap;
+    @media screen and (max-width: $mobile-break) {
+        min-width: 100%;
+        font-size: 80%;
+        padding: 8px 20px 10px 15px;
+    }
 
     &:before {
         content: "";
