--- a/src/sass/general/various.scss
+++ b/src/sass/general/various.scss
@@ -42,7 +42,12 @@ body {
         -4px -4px 0 -2px,
         4px 4px 0 -2px;
     margin-left: -2px;
-    margin-top: 1px
+    margin-top: 1px;
+
+    @media screen and (max-width: $mobile-break) {
+        min-width: 100%;
+        font-size: 80%;
+    }
 }
 .external-link::after,
 .external-link::before {
