--- a/src/sass/elements/header.scss
+++ b/src/sass/elements/header.scss
@@ -48,7 +48,7 @@ nav {
         border-radius: 50px;
         height:59px;
         width:60px;
-        z-index: 6;
+        z-index: 7;
         position: absolute;
         top: 7px;
         left: -6px;
@@ -81,7 +81,7 @@ nav {
             transition: all 0.3s;
             font-family: $truLight;
         }
-        &:hover { 
+        &:hover {
             box-shadow: 5px -1px 6px -1px rgba(0,0,0,0.75);
             cursor: pointer;
         }
@@ -90,40 +90,44 @@ nav {
         }
         &:nth-child(2) {
             background: #ffc799;
-            z-index: 5;
+            z-index: 6;
             margin-left: 25px;
             border-radius: 25px;
 
             &:hover {
                 background: #fcddc3;
             }
-        }        
+        }
         &:nth-child(3) {
             background: #cfff99;
-            z-index: 4;
+            z-index: 5;
 
             &:hover {
                 background: #e1fcc2;
             }
-        }        
+        }
         &:nth-child(4) {
             background: #99fff6;
-            z-index: 3;
+            z-index: 4;
 
             &:hover {
                 background: #bcfcf6;
             }
-        }        
+        }
         &:nth-child(5) {
             background: #c099ff;
-            z-index: 2;
-        }        
+            z-index: 3;
+        }
         &:nth-child(6) {
             background: #f399ff;
-            z-index: 1;
-        }        
+            z-index: 2;
+        }
         &:nth-child(7) {
             background: #ff99c4;
+            z-index: 1;
+        }
+        &:nth-child(8) {
+            background: #de63a3;
             z-index: 0;
         }
     }
